# pear

./: Cargo.toml
config/: backup.toml  idea.toml  main.toml
src/: error.rs  main.rs
src/cli/: app.rs  io.rs  mod.rs
src/cli/provider/: mod.rs  ollama.rs  setup.rs
src/config/: error.rs  mod.rs
src/services/: error.rs  mod.rs
src/services/provider/: config.rs  mod.rs  ollama.rs
src/services/provider_api/: config.rs  error.rs  mod.rs
src/services/provider_api/anthropic/: config.rs
src/services/provider_api/ollama/: config.rs  mod.rs
src/tui/: mod.rs
