[package]
name = "pear"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.8", features = ["cargo", "derive", "string"] }
reqwest = "0.12.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
#thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
toml = "0.8.14"
url = { version = "2.5.2", features = ["serde"] }
